tests/diagnostics/cannot_infer_type_args.stderr
error[E0097]: 型引数を推論できません: Option の T (型注釈が必要です)
 --> tests/diagnostics/cannot_infer_type_args.kal:3:1
  |
3 | None;
  | ^^^^
1 個のエラーで中断しました
